@@ -1,5 +1,5 @@
 #
-# $Id: elftoolchain.os.mk 2068 2011-10-26 15:49:07Z jkoshy $
+# $Id: elftoolchain.os.mk 2985 2014-03-06 03:24:35Z jkoshy $
 #
 
 # OS specific build instructions
@@ -19,4 +19,8 @@ OS_HOST != uname -s
 .include "${.CURDIR}/os.${OS_HOST}.mk"
 .endif
 
+# Supply an OS-specific "clobber" rule, if one was not specified.
+.if !target(os-specific-clobber)
+os-specific-clobber: .PHONY
+.endif
 .endif
